Refactoring: use Property in extension, added task classes, use withDependencies instead of afterEvaluate